--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#hero-section">Home</a></li>
                     <li><a href="#mywork-section">My Work</a></li>
                     <li><a href="#education-section">Education</a></li>
-                    <li><a href="#">About Me</a></li>
+                    <li><a href="#about-section">About Me</a></li>
                     <li><a href="#" id="active-btn">Contact</a></li>
                 </ul>
             </div>
@@ -169,8 +169,36 @@
         </div>
     </section>
 
+    <!-- ABOUT ME SECTION -->
+
+    <section class="about-section" id="about-section">
+        <h1 class="section-title">
+            About Me
+        </h1>
+        <div class="about-container">
+            <div class="about-content">
+                <h1 class="name">Syed Shujaat Haider</h1>
+                <h3 class="role">Data Scientist</h3>
+                <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum pariatur neque rem fugiat omnis odio ipsum rerum doloremque temporibus illo?</p>
+                <ul>
+                    <li><a href="https://github.com/sshrizvi"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-slack"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                </ul>
+            </div>
+            <div class="about-image">
+                <img src="https://images.unsplash.com/photo-1545184180-25d471fe75eb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="about-image">
+            </div>
+        </div>
+    </section>
+
 
     <!-- JAVASCRIPT  -->
+
+    <!-- FONT AWESOME CDN -->
+
+    <script src="https://kit.fontawesome.com/56a0bcecf4.js" crossorigin="anonymous"></script>
 
     <!-- TYPED JS CDN -->
 
