--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         var typed = new Typed('#role', {
           strings: ['Syed Shujaat Haider', 'a Data Scientist'],
           typeSpeed: 50,
-          backSpeed: 5000,
+          backDelay: 5000,
           loop: true,
           loopCount: Infinity
         });
